<resources>
    <string name="AppName">Buzzwords Lite</string>
    <string name="IntentTitle">com.buzzwordslite.intent.action.TITLE</string>
    <string name="IntentSettings">com.buzzwordslite.intent.action.SETTINGS</string>
    <string name="IntentRules">com.buzzwordslite.intent.action.RULES</string>
    <string name="IntentBuzzer">com.buzzwordslite.intent.action.BUZZER</string>
    <string name="IntentGameSetup">com.buzzwordslite.intent.action.GAMESETUP</string>
    <string name="IntentTurn">com.buzzwordslite.intent.action.TURN</string>
    <string name="IntentTurnSummary">com.buzzwordslite.intent.action.TURNSUMMARY</string>
    <string name="IntentEndGame">com.buzzwordslite.intent.action.GAMEEND</string>
    <string name="IntentCardReview">com.buzzwordslite.intent.action.CARDREVIEW</string>
    <string name="IntentEditTeamName">com.buzzwordslite.intent.action.EDITTEAMNAME</string>
    <string name="IntentPackPurchase">com.buzzwordslite.intent.action.WORDPACKPURCHASE</string>
    <string name="IntentPackInfo">com.buzzwordslite.intent.action.PACKINFO</string>
    <string name="IntentCredits">com.buzzwordslite.intent.action.CREDITS</string>
    <string name="PREFKEY_SHOWREMINDER">com.buzzwordslite.prefkey.SHOWREMINDER</string>
    <string name="PREFKEY_SHOWFIRSTRUN">com.buzzwordslite.prefkey.SHOWFIRSTRUN</string>
    <string name="PREFKEY_PLAYCOUNT">com.buzzwordslite.prefkey.PREFKEY_PLAYCOUNT</string>
    <string name="PREFKEY_GAMETYPE">com.buzzwordslite.prefkey.GAMETYPE</string>
    <string name="PREFKEY_GAMELIMIT_TURNS">com.buzzwordslite.prefkey.GAMELIMIT_TURNS</string>
    <string name="PREFKEY_GAMELIMIT_SCORE">com.buzzwordslite.prefkey.GAMELIMIT_SCORE</string>
    <string name="menu_EndTurn">MENU_ENDTURN</string>
    <string name="menu_EndTurn_Title">End Turn</string>
    <string name="menu_EndTurn_Text">Are you sure you want to end your turn?</string>
    <string name="menu_EndGame">MENU_ENDGAME</string>
    <string name="menu_EndGame_Title">End Game</string>
    <string name="menu_EndGame_Text">Are you sure you want to end the current game?</string>
    <string name="menu_Rules">MENU_RULES</string>
    <string name="menu_Rules_Title">Rules</string>
    <string name="menu_GoPro">MENU_GOPRO</string>
    <string name="menu_GoPro_Title">Go Pro</string>
    <string name="teamnameA">Blue</string>
    <string name="teamnameB">Green</string>
    <string name="teamnameC">Red</string>
    <string name="teamnameD">Yellow</string>
    <string name="gameManager_gameType_turns">Turn Limit</string>
    <string name="gameManager_gameType_turns_param">Turns</string>
    <string name="gameManager_gameType_score">Score Limit</string>
    <string name="gameManager_gameType_score_param">Points</string>
    <string name="gameManager_gameType_freeplay">Free Play</string>
    <string name="cardBundleKey">com.buzzwordslite.card</string>
    <string name="packBundleKey">com.buzzwordslite.pack</string>
    <string name="cardIndexBundleKey">com.buzzwordslite.cardIndex</string>
    <string name="cardStateBundleKey">com.buzzwordslite.cardState</string>
    <string name="teamBundleKey">com.buzzwordslite.team</string>
    <string name="teamNameBundleKey">com.buzzwordslite.teamName</string>
    <string name="packInfoIsPackSelectedBundleKey">com.buzzwordslite.isPackSelected</string>
    <string name="packInfoIsPackRowOddBundleKey">com.buzzwordslite.isPackRowOdd</string>
    <string name="packInfoPurchaseTypeKey">com.buzzwordslite.packPurchaseType</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="button_menu">Menu</string>
    <string name="title_button_label_buzz">Buzz</string>
    <string name="title_button_label_settings">Settings</string>
    <string name="title_button_label_rules">Rules</string>
    <string name="title_lite">LITE</string>
    <string name="packpurchase_title">Select Word Packs</string>
    <string name="packpurchase_unlockedheader">Your Packs</string>
    <string name="packpurchase_lockedheader">Available Packs</string>
    <string name="packpurchase_nopacksselected">No Packs Selected</string>
    <string name="packpurchase_button">Play Game</string>
    <string name="packpurchase_nointernet">Could not access the online store. We can only show your installed packs.</string>
    <string name="packpurchase_allpurchased">Thanks for supporting us! We currently have no packs available but check back for more.</string>
    <string name="packpurchase_litemode">Download the full version for more words!</string>
    <string name="toast_packpurchase_nofacebook">Sorry, we could not detect any Facebook apps.</string>
    <string name="toast_packpurchase_purhcasefailed">Sorry, your purchase could not be made. Please try again later.</string>
    <string name="toast_packpurchase_installfailed">Sorry, we encountered an error installing a pack. Please try again later.</string>
    <string name="toast_packpurchase_nopackselected">Select at least one of Your Packs to play.</string>
    <string name="toast_packpurchase_alreadypurchased">You\'ve already purchased this pack. Installing it now.</string>
    <string name="turn_timesup">Time\'s Up!</string>
    <string name="turn_paused">Paused</string>
    <string name="turn_paused_subtext">Tap to Unpause</string>
    <string name="turnSummary_title">Results</string>
    <string name="turnSummary_total">Total: </string>
    <string name="turnSummary_scores_header">Scores</string>
    <string name="turnSummary_scorelimit">Score Limit: </string>
    <string name="turnSummary_freeplay">Free Play</string>
    <string name="turnSummary_round">Round: </string>
    <string name="turnSummary_button_next">Next Team</string>
    <string name="turnSummary_button_results">Game Results</string>
    <string name="turnSummary_gameover">Game Over</string>
    <string name="button_notset">Clear</string>
    <string name="editTeamName_hint">Choose a new name for %s team.</string>
    <string name="editTeamName_title">Edit Team Name</string>
    <string name="gameEnd_title">Game Over</string>
    <string name="gameEnd_scoreboardHeader">Final Scores</string>
    <string name="gameEnd_winner">Winner:</string>
    <string name="gameEnd_tie">Tie Game!</string>
    <string name="gameEnd_button_mainMenu">Main Menu</string>
    <string name="gameEnd_button_rematch">Rematch</string>
    <string name="rateUsFirstDialog_title">We want your feedback!</string>
    <string name="rateUsFirstDialog_text">It looks like you\'ve played a few games.
     Would you mind taking a minute to provide some feedback?</string>
    <string name="rateUsSecondDialog_title">We still want your feedback!</string>
    <string name="rateUsSecondDialog_text">Wow you\'ve played a LOT, which means your opinion is especially valuable to us!
     We won\'t bug you again but would you mind providing some feedback?</string>
    <string name="rateUsDialog_positiveBtn">Rate</string>
    <string name="rateUsDialog_neutralBtn">Later</string>
    <string name="rateUsDialog_negativeBtn">Never</string>
    <string name="packInfo_confirm_nobuy">OK</string>
    <string name="packInfo_alreadyowned">This pack is installed</string>
    <string name="packInfo_cardsinpack">Cards in Pack: %s</string>
    <string name="packInfo_button_free">Download (Free)</string>
    <string name="packInfo_button_pay">Purchase</string>
    <string name="packInfo_button_facebook">Like Us</string>
    <string name="gameSetup_title">Game Setup</string>
    <string name="gameSetup_teams_header">Teams</string>
    <string name="gameSetup_gametype_header">Game Type</string>
    <string name="gameSetup_button_next">Continue</string>
    <string name="gameSetup_hint_teams">Tap teams to add or remove them. Tap the pencil to rename a team.</string>
    <string name="gameSetup_hint_GameType">Game type determines when the game will end. Play to a set number of turns, points, or choose free play to play to your heart\'s content.</string>
    <string name="gameSetup_hint_turns">Set the number of turns each team will take.</string>
    <string name="gameSetup_hint_score">Set the number of points a team needs to win. All teams will play an equal number of turns.</string>
    <string name="rules_title">Rules</string>
    <string name="rules_basics_subheader">Basics</string>
    <string name="rules_basics_text1">At its core, Buzzwords is a team game that pits friends against friends in cutthroat wordplay action. Here are the basics:</string>
    <string name="rules_basics_text2">Divide all players into teams of two or more.</string>
    <string name="rules_basics_text3">Each turn a team assigns a presenter who must try to get their team to guess as many secret words as possible, without saying certain \'buzz\'words.</string>
    <string name="rules_basics_text4">Use full sentences, single words, sounds, or even singing &#8212; but no \'buzz\'words!</string>
    <string name="rules_basics_text5">An opposing player enforces the list of \'buzz\'words.</string>
    <string name="rules_basics_text6">Points are awarded for each successfully guessed word.</string>
    <string name="rules_basics_text7">The team that has the most points at the end of the game wins!</string>
    <string name="rules_houserules_subheader">House Rules: </string>
    <string name="rules_gameplay_subheader">Gameplay</string>
    <string name="rules_gameplay_text1">Let\'s take a look at the buttons you\'ll encounter while playing.</string>
    <string name="rules_gameplay_text2">Right Button: For when your team guesses the card correctly. +1 Point by default.</string>
    <string name="rules_gameplay_text3">Skip Button: For when you are not up to the challenge of the current word. No penalty by default.</string>
    <string name="rules_gameplay_text4">Buzz Button: For when you get called out by the other team for using a \'buzz\'word. -1 Point by default.</string>
    <string name="rules_gameplay_text5">Back Button (phone): You can use the back button on your Android device to go back one card.  Don\'t worry if you messed up more than once. You can always fix the results on Turn Summary.</string>
    <string name="rules_gameplay_text6">Gestures can also be used perform actions. Swipe up for right (think thumbs up), down for wrong (thumbs down), left for skip, and right for back.</string>
    <string name="rules_gameplay_text7">The game can be paused by either hitting the Menu button or tapping the timer at the top.  And don\'t worry, it will pause if anyone calls and interrupts your intense game of Buzzwords.</string>
    <string name="rules_screens_subheader">Sample Screens</string>
    <string name="credits_title">Buzzwords Credits</string>
    <string name="credits_team_subheader">The Team</string>
    <string name="credits_edward"><b>Edward Rowe\nProgrammer</b>\nEdward works as a video game programmer near Durham, NC.</string>
    <string name="credits_lucas"><b>Lucas Rowe\nProgrammer</b>\nLucas is currently a QA Engineer in Raleigh, NC.</string>
    <string name="credits_patrick"><b>Patrick Reynolds\nProgrammer</b>\nPatrick is a programmer in Carborro, NC and is also working on his PHD in Computer Science from UNC Chapel Hill.</string>
    <string name="credits_acknowledgements_subheader">Acknowledgements</string>
    <string name="credits_kevin">Sounds and music were created by Kevin Mabie.</string>
    <string name="credits_fonts">Use of all fonts is permitted under the SIL Open Font License, Version 1.1.</string>
    <string name="credits_font_anton">Anton font by Vernon Adams</string>
    <string name="credits_font_francoisone">Francois One font by Vernon Adams</string>
    <string name="credits_font_luckiestguy">Luckiest Guy font, used in our icon, created by Brian J. Bonislawsky</string>
    <string name="credits_others">Thank you to our friends and family who helped us create and test Buzzwords!</string>
</resources>